Added user details to login response
