# src/routes/login.js
@@ -7,8 +7,8 @@ router.post('/', async (req, res, next) => {
         const { value, error } = LoginInformation.validate(req.body);
         if (error) throw error;
 
-        const registrationToken = await LoginService.Login(value.email, value.password);
-        res.status(200).send(registrationToken);
+        const registrationTokenData = await LoginService.Login(value.email, value.password);
+        res.status(200).send(registrationTokenData);
     } catch (err) {
         next(err);
     }
